--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -169,4 +169,10 @@
                         <outlet property="previewView" destination="uns-F8-ece" id="Kq6-oo-VCJ"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="E1I-SQ-clc" userLabel="First Responder" sceneMemberID="fir
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E1I-SQ-clc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="797.60000000000002" y="133.5832083958021"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="fI8-1i-Xhf">
+            <objects
