--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -175,4 +175,7 @@
         </scene>
         <!--View Controller-->
         <scene sceneID="fI8-1i-Xhf">
-            <objects
+            <objects>
+                <viewController id="AWq-id-vMO" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="q6S-IG-cay">
+                        <rect key
