--- a/MachineLearningDemo/View/Main.storyboard
+++ b/MachineLearningDemo/View/Main.storyboard
@@ -178,4 +178,6 @@
             <objects>
                 <viewController id="AWq-id-vMO" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="q6S-IG-cay">
-                        <rect key
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="cal
